[package]
name = "metadata-transferer"
version = "0.4.0"
edition = "2021"
authors = ["Odilf <odysseas.maheras@gmail.com>"]
license = "MIT"
description = "CLI tool to transfer metadata between files"
readme = "README.md"
repository = "https://github.com/Odilf/grrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive", "cargo"] }